# indic-trans

./: .gitignore  .testr.conf  .travis.yml  AUTHORS  ChangeLog  LICENSE.md  Makefile  README.md  README.rst  circle.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: TRAIN_TEST.rst
docs/: Makefile  conf.py  deps.txt  guide_installation.rst  guide_model.rst  guide_transliteration.rst  index.rst  make.bat  module_trans.rst
indictrans/: __init__.py  __main__.py  base.py  ind2rom.py  rom2ind.py  script_trans.py  script_transliterate.py  transliterator.py  version.py
indictrans/_decode/: __init__.py  beamsearch.c  beamsearch.pyx  viterbi.c  viterbi.pyx
indictrans/_utils/: __init__.py  ctranxn.c  ctranxn.pyx  one_hot_encoder.py  one_hot_repr.py  script_normalizer.py  sparseadd.c  sparseadd.pyx  wx.py
indictrans/mappings/: punkt.map  urdu_urdu.map
indictrans/models/: eb_classes.npy  eg_classes.npy  eg_intercept_final.npy  eh_classes.npy  eh_intercept_final.npy  eh_intercept_init.npy  eh_intercept_trans.npy  ek_intercept_final.npy  ek_intercept_init.npy  ek_intercept_trans.npy  em_classes.npy  em_intercept_final.npy  eo_intercept_init.npy  et_intercept_init.npy  et_sparse.vec  eta_classes.npy  he_classes.npy  he_intercept_final.npy  he_intercept_init.npy  he_intercept_trans.npy  ke_intercept_trans.npy  me_intercept_final.npy  me_intercept_trans.npy  oe_coef.npy  oe_intercept_init.npy  oe_intercept_trans.npy  pe_intercept_final.npy  pe_intercept_trans.npy  tae_intercept_final.npy  te_intercept_final.npy
indictrans/models/ben-eng/: classes.npy  intercept_final.npy  intercept_init.npy  intercept_trans.npy
indictrans/models/ben-guj/: classes.npy  intercept_final.npy  intercept_init.npy  intercept_trans.npy
indictrans/models/ben-hin/: classes.npy  intercept_final.npy  intercept_init.npy  intercept_trans.npy
indictrans/models/ben-kan/: classes.npy  coef.npy  intercept_final.npy  intercept_init.npy  intercept_trans.npy  sparse.vec
indictrans/models/ben-mal/: classes.npy  coef.npy  intercept_final.npy  intercept_init.npy  intercept_trans.npy  sparse.vec
indictrans/models/ben-ori/: classes.npy  intercept_final.npy  intercept_init.npy  (+1 more)
indictrans/tests/: ben_eng.testpairs  eng_urd.testpairs  guj_eng.testpairs  hin_eng.testpairs  hin_urd.testpairs  indic-test  kan_eng.testpairs  mal_eng.testpairs  ori_eng.testpairs  pan_eng.testpairs  pan_urd.testpairs  tam_eng.testpairs  tel_eng.testpairs  test_trans.py
indictrans/trunk/: __init__.py  __main__.py  perceptron.py
tests/: hindi.txt  hindi.txt~
(+534 files in other folders)
