[metadata]
name = indictrans
summary = Transliteration system for Indian languages including English 
description-file =
  README.rst
author = Irshad Ahmad Bhat
author-email = irshad.bhat@research.iiit.ac.in
home-page = 
classifier =
  #Environment :: Web Environment
  #Framework :: Flask
  Intended Audience :: Developers
  Intended Audience :: Science/Research 
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 2.7

[files]
packages = indictrans

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1

