[metadata]
name = indictrans
summary = Transliteration system for Indian languages including English 
description-file =
  README.rst
author = Irshad Ahmad Bhat
author-email = irshad.bhat@research.iiit.ac.in
home-page = 
classifier =
  #Framework :: Flask
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Science/Research 
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5

[files]
packages = 
    indictrans

[entry_points]
console_scripts =
    indictrans = indictrans:main
    indictrans-trunk = indictrans.trunk:main

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1

